--- a/app/views/pages/index.ejs
+++ b/app/views/pages/index.ejs
@@ -299,9 +299,7 @@
           <img src="imagens/brecho1.png" alt="Mayte" class="profile-image">
           <section class="profile-info">
             <strong>Mayte</strong>
-            <span class="rating">4.9 <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span></span>
-
-
+            <span class="rating">4.9 ⭐⭐⭐⭐⭐</span>
 
           </section>
           <a href="/perfil1"><button class="follow-button">Favoritar</button></a>
