--- a/app/views/pages/login.ejs
+++ b/app/views/pages/login.ejs
@@ -22,7 +22,7 @@
         <section class="welcome-section">
             <h2>Cadastre-se</h2>
             <br>
-            <p>"Acesse usando seu cadastro de outra plataforma"</p>
+            <p>Acesse usando seu cadastro de outra plataforma</p>
         </section>
         <br>
         <br>
